--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  background: url("https://preview.colorlib.com/theme/edumark/img/banner/banner.png.webp");
 }
 
 .App-logo {
@@ -32,7 +32,14 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
+  }
+}
+
+@media (min-width: 700px) {
+  h1 {
+    font-size: 7vw;
   }
 }
